A payout says what it handed over, and a locked quest says when it comes back
A Lootable reward is only rolled at the moment it is granted, so every toast
that followed a payout could only paint one generic "Loot Bundle" row and the
player never learned what they got.

A grant now answers a RECEIPT. RewardHandler gains a fourth grant form carrying
a sink, whose default reports the spec itself because for most kinds the spec IS
what was handed over; the Lootable kind overrides it to report one Item per thing
that landed, and nothing at all for a roll that came up empty. RewardGrants folds
those reports into GrantOutcome.receipt() and keeps a handler's only when its
grant returned normally, so a reward that failed or parked for a later attempt is
never listed as delivered.

Quest_Completed and Achievement_Unlocked now fire AFTER the grant that pays what
they announce, carrying the receipt, with the native event moving alongside the
moment rather than being split from it. Quest_Parked keeps the authored promise,
because nothing has been paid there. The two claim moments, the objective book's
three Collect verbs, the same collect made at a character, the bounty board, the
storefront's bought toast and each participant's own share of a boss payout all
read the receipt; Encounter_Defeated carries a rewards argument for the first
time, which its own comment had been promising.

A toast lists ONLY what was handed over. A hand-in that parks reads the plain
"Handed in." line with no rows, never the gold payout headline over an empty
panel and never the authored list, which would show a player items they do not
have.

Naming content is this library's job, whole. ContentText's ladder ended at
whichever key was written, where a consumer's own ladder ended at a sentence
describing the first step, so a quest whose author wrote neither key nor name
painted a raw quest.<id>.title on every surface reading through it. The first
stamped step now answers before the written key, and the 